--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.4.4",
     "vue": "^2.6.10",
+    "vue-cookies": "^1.6.1",
     "vue-i18n": "^8.15.3",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.0",
