--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^5.0.45",
     "core-js": "^3.6.4",
     "vue": "^2.6.10",
     "vue-cookies": "^1.7.0",
