--- a/package.json
+++ b/package.json
@@ -8,25 +8,27 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@mdi/font": "^5.0.45",
-    "core-js": "^3.6.4",
+    "@mdi/font": "^5.1.45",
+    "core-js": "^3.6.5",
+    "register-service-worker": "^1.7.1",
     "vue": "^2.6.10",
     "vue-cookies": "^1.7.0",
-    "vue-i18n": "^8.16.0",
+    "vue-i18n": "^8.17.4",
     "vue-router": "^3.1.6",
-    "vuetify": "^2.2.19",
-    "vuex": "^3.1.3"
+    "vuetify": "^2.2.27",
+    "vuex": "^3.3.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.2.3",
-    "@vue/cli-plugin-eslint": "^4.2.3",
-    "@vue/cli-plugin-router": "^4.2.3",
-    "@vue/cli-plugin-vuex": "^4.2.3",
-    "@vue/cli-service": "^4.2.3",
+    "@vue/cli-plugin-babel": "^4.3.1",
+    "@vue/cli-plugin-eslint": "^4.3.1",
+    "@vue/cli-plugin-pwa": "^4.3.1",
+    "@vue/cli-plugin-router": "^4.3.1",
+    "@vue/cli-plugin-vuex": "^4.3.1",
+    "@vue/cli-service": "^4.3.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "sass": "^1.26.3",
+    "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "vue-cli-plugin-vuetify": "^2.0.5",
     "vue-template-compiler": "^2.6.10",
